--- a/keyutil/Cargo.toml
+++ b/keyutil/Cargo.toml
@@ -7,6 +7,4 @@ license = "GPL-3.0-or-later"
 
 [dependencies]
 argh = "0.1.3"
-
-[dependencies.librad]
-git = "https://github.com/radicle-dev/radicle-link"
+librad = "0"
