--- a/seed/Cargo.toml
+++ b/seed/Cargo.toml
@@ -16,13 +16,6 @@ warp = { version = "0.2.5", default-features = false }
 serde_json = "1"
 serde = "1"
 
-[dependencies.librad]
-git = "https://github.com/radicle-dev/radicle-link"
-
-[dependencies.radicle-seed]
-git = "https://github.com/radicle-dev/radicle-link"
-
-[dependencies.radicle-avatar]
-git = "https://github.com/radicle-dev/radicle-avatar"
-# cargo doesn't know about the new speak
-branch = "main"
+librad = "0"
+radicle-avatar = "0"
+radicle-seed = "0"
